# pyzfs

./: CMakeLists.txt  Makefile  README  code.cxx  code.h  common.i  config.h.in  core.h  notes.txt  pyzfs.i  pyzfs_debug.i  test.py  trevorj-TODO  z.cxx  z.h  zfs.cxx  zfs.h  zfs_config.h.trevorj  zpool.cxx  zpool.h
ctypes/: generate_status_list.c  pyzfs.py  test.py
java_api_example/: README.txt
