# This is a CMake example for Python
cmake_minimum_required(VERSION 2.6)
# SET(CMAKE_CXX_COMPILER "/opt/SunStudioExpress/bin/CC")
SET(CMAKE_CXX_COMPILER "/usr/bin/g++")

project(pyzfs)
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
INCLUDE(CheckTypeSize)
INCLUDE(CheckStructHasMember)

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

# INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
# INCLUDE_DIRECTORIES(/usr/include)

SET(CMAKE_SWIG_FLAGS "-c++;-classic")
SET(CMAKE_SHARED_LINKER_FLAGS "-fPIC")

SET_SOURCE_FILES_PROPERTIES(pyzfs.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(pyzfs.i PROPERTIES SWIG_FLAGS "")
SWIG_ADD_MODULE(pyzfs python pyzfs.i z.cxx zfs.cxx zpool.cxx)
SWIG_LINK_LIBRARIES(pyzfs ${PYTHON_LIBRARIES})
SWIG_LINK_LIBRARIES(pyzfs zfs)
SWIG_LINK_LIBRARIES(pyzfs stdc++)
set(SWIG_MODULE_pyzfs_EXTRA_DEPS common.i)
CHECK_TYPE_SIZE(zfs_source_t ZFS_SOURCE_T)
CHECK_TYPE_SIZE(sendflags_t SENDFLAGS_T)
CHECK_STRUCT_HAS_MEMBER (recvflags_t istail libzfs.h HAVE_RECVFLAGS_T_ISTAIL)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)

ENABLE_TESTING()
ADD_TEST(main python2.6 test.py)
